--- a/signup.html
+++ b/signup.html
@@ -37,58 +37,66 @@
             <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
                 Create your account
             </h2>
-            <p class="mt-2 text-center text-sm text-gray-600">
-                Already have an account?
-                <a href="/login.html" class="font-medium text-primary hover:text-red-500">
-                    Sign in here
-                </a>
-            </p>
-        </div>
-        <form class="mt-8 space-y-6" action="#" method="POST" id="signup-form">
-            <input type="hidden" name="remember" value="true">
-            <div class="rounded-md shadow-sm -space-y-px">
-                <div>
-                    <label for="name" class="sr-only">Full Name</label>
-                    <input id="name" name="name" type="text" autocomplete="name" required
-                        class="appearance-none rounded-none rounded-t-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-primary focus:border-primary focus:z-10 sm:text-sm"
-                        placeholder="Full Name">
-                </div>
-                <div>
-                    <label for="email-address" class="sr-only">Email address</label>
-                    <input id="email-address" name="email" type="email" autocomplete="email" required
-                        class="appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-primary focus:border-primary focus:z-10 sm:text-sm"
-                        placeholder="Email address">
-                </div>
-                <div>
-                    <label for="password" class="sr-only">Password</label>
-                    <input id="password" name="password" type="password" autocomplete="new-password" required
-                        class="appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-primary focus:border-primary focus:z-10 sm:text-sm"
-                        placeholder="Password">
-                </div>
-                <div>
-                    <label for="password-confirm" class="sr-only">Confirm Password</label>
-                    <input id="password-confirm" name="password-confirm" type="password" autocomplete="new-password"
-                        required
-                        class="appearance-none rounded-none rounded-b-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-primary focus:border-primary focus:z-10 sm:text-sm"
-                        placeholder="Confirm Password">
+            <div class="mt-8 text-center space-y-4">
+                <p class="text-sm text-gray-600">
+                    Already have an account?
+                    <a href="/index.html" class="font-medium text-brand-red hover:text-red-600">
+                        Sign in here
+                    </a>
+                </p>
+                <div class="mt-6 pt-6 border-t border-gray-100">
+                    <a href="admin-login.html"
+                        class="flex items-center justify-center gap-2 text-sm font-bold text-brand-red hover:text-red-700 transition-colors p-2 bg-red-50 rounded-lg">
+                        <i data-lucide="shield" class="w-4 h-4"></i>
+                        Click Here for Admin Login
+                    </a>
                 </div>
             </div>
+            <form class="mt-8 space-y-6" action="#" method="POST" id="signup-form">
+                <input type="hidden" name="remember" value="true">
+                <div class="rounded-md shadow-sm -space-y-px">
+                    <div>
+                        <label for="name" class="sr-only">Full Name</label>
+                        <input id="name" name="name" type="text" autocomplete="name" required
+                            class="appearance-none rounded-none rounded-t-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-primary focus:border-primary focus:z-10 sm:text-sm"
+                            placeholder="Full Name">
+                    </div>
+                    <div>
+                        <label for="email-address" class="sr-only">Email address</label>
+                        <input id="email-address" name="email" type="email" autocomplete="email" required
+                            class="appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-primary focus:border-primary focus:z-10 sm:text-sm"
+                            placeholder="Email address">
+                    </div>
+                    <div>
+                        <label for="password" class="sr-only">Password</label>
+                        <input id="password" name="password" type="password" autocomplete="new-password" required
+                            class="appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-primary focus:border-primary focus:z-10 sm:text-sm"
+                            placeholder="Password">
+                    </div>
+                    <div>
+                        <label for="password-confirm" class="sr-only">Confirm Password</label>
+                        <input id="password-confirm" name="password-confirm" type="password" autocomplete="new-password"
+                            required
+                            class="appearance-none rounded-none rounded-b-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-primary focus:border-primary focus:z-10 sm:text-sm"
+                            placeholder="Confirm Password">
+                    </div>
+                </div>
 
-            <div>
-                <button type="submit"
-                    class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-primary hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary transition-colors">
-                    <span class="absolute left-0 inset-y-0 flex items-center pl-3">
-                        <i data-lucide="user-plus" class="h-5 w-5 text-red-300 group-hover:text-red-200"></i>
-                    </span>
-                    Sign Up
-                </button>
-            </div>
-        </form>
-    </div>
-    <script>
-        lucide.createIcons();
-    </script>
-    <script type="module" src="signup-logic.js"></script>
+                <div>
+                    <button type="submit"
+                        class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-primary hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary transition-colors">
+                        <span class="absolute left-0 inset-y-0 flex items-center pl-3">
+                            <i data-lucide="user-plus" class="h-5 w-5 text-red-300 group-hover:text-red-200"></i>
+                        </span>
+                        Sign Up
+                    </button>
+                </div>
+            </form>
+        </div>
+        <script>
+            lucide.createIcons();
+        </script>
+        <script type="module" src="signup-logic.js"></script>
 </body>
 
 </html>
